<resources>
    <!-- DRAWER -->
    <string name="postcards_label">Postcards</string>
    <string name="historical_walk">Historical walk</string>
    <string name="about_project">About project</string>
    <string name="team">Team</string>
    <string-array name="supported_languages">
        <item>en</item>
        <item>hr</item>
    </string-array>
    <string name="language_eng">English</string>
    <string name="language_cro">Hrvatski</string>
    <string name="now_and_then_label">Check how they look now and how they looked Then</string>
    <string name="present_label">Present</string>
    <string name="historical_label">Historical</string>
    <string name="find_out_more">Find out more</string>

    <string name="credits" translatable="false">Application \nDesign&amp;Development</string>
    <string name="credits_link" translatable="false">Factory.hr</string>
</resources>
